--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-generator": "^4.16.1",
     "firebase": "^7.6.0",
     "http-errors": "^1.7.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "typescript": "^3.7.2"
