--- a/functions/package.json
+++ b/functions/package.json
@@ -14,15 +14,17 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.3.7",
+    "@types/node": "^12.12.8",
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "crypto-ts": "^1.0.2",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
     "firebase": "^7.6.0",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.0.2",
     "http-errors": "^1.7.3",
-    "@types/node": "^12.12.8",
-    "body-parser": "^1.19.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
