--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^12.12.8",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "crypto-ts": "^1.0.2",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
